--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "eslint": "^8.10.0",
     "git-commit-msg-linter": "^4.1.1",
     "typescript": "^4.5.5"
   }
