--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/node": "^17.0.21",
     "eslint": "^8.10.0",
     "git-commit-msg-linter": "^4.1.1",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "lint-staged": "^12.3.4",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   }
