--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
+    "@types/validator": "^13.7.1",
     "eslint": "^8.10.0",
     "git-commit-msg-linter": "^4.1.1",
     "husky": "^7.0.4",
@@ -24,5 +25,8 @@
     "lint-staged": "^12.3.4",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
