--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^27.4.1",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^17.0.21",
+    "@types/supertest": "^2.0.11",
     "@types/validator": "^13.7.1",
     "eslint": "^8.10.0",
     "git-commit-msg-linter": "^4.1.1",
@@ -29,6 +30,7 @@
     "jest": "^27.5.1",
     "lint-staged": "^12.3.4",
     "sucrase": "^3.20.3",
+    "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
